styles/main.css
@font-face {
    font-family: "serif";
    src: url('Average-Regular.ttf');
}

body {
	background: #1A1A1A;
	font-family: 'Average', serif;
	font-size: 18px;
	color: white;
}

h1 {
	font-size: 24px;
	color: #F9E79F;
}

h2 {
	font-size: 24px;
	color: #F9E79F;
}


table, th, td {
	border: 1px solid white;
	border-collapse: collapse;
}
th, td {
	padding: 5px;
}
th {
	text-align: left;
}

a {
	color: white;
}
a.visited {
	color: #EC7063;
}
a:hover {
	color: white;
}
a:active {
	color: #EC7063;
}

ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
	overflow: hidden;
	background-color: #343434;
}

li {
	float: left;
}

li a {
	display: block;
	color: white;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
	font-size: 18px;
}

li a:hover {
	background-color: #111;
}

.container {
	margin-left: 5vw;
	margin-right: 5vw;
}

